# isen-devoir-c

./: README.md  createlinkedlist.h  isen_devoir_c.c  meson.build  meson.build.old  test.txt
.cache/clangd/index/: isen_devoir_c.c.69A5BA3AB4C820F4.idx
include/: file.h  filters.h  linenumbers.h  linkedlist.h  readfile.h  search.h  word.h
samples/: mega.txt  test.tx  test.txt
src/: file.c  filters.c  isen_devoir_c.c  linenumbers.c  linkedlist.c  main.c  meson.build  readfile.c  search.c  word.c
